Improve word wrap fix for option label

--- a/src/collection-preferences/content-display/content-display-option.scss
+++ b/src/collection-preferences/content-display/content-display-option.scss
@@ -61,7 +61,7 @@ $border-radius: awsui.$border-radius-item;
 
 .content-display-option-label {
   flex-grow: 1;
-  overflow: hidden;
+  @include styles.text-wrapping;
   padding-right: awsui.$space-l;
 }
 
